# aidd-workflow

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Makefile  PLAN.md  README.md  ROADMAP.md  install.sh
.agents/skills/functional-core-imperative-shell/: SKILL.md
.agents/skills/workflow-creator/: SKILL.md
.agents/skills/workflow-runner/: SKILL.md
.claude/: settings.json
.claude/agents/: implement.md  run-lint.md  run-test.md
.claude/hooks/: post-bash-capture-test.sh  post-edit-rust-checks.sh  post-edit-validate-config.sh  pre-taskupdate-gate.sh
.claude/skills/: workflow-runner
.claude/skills/workflow-create/: SKILL.md
.claude/skills/workflow-orchestrator/: SKILL.md
.claude/skills/workflow-runner/: SKILL.md
.githooks/: commit-msg  pre-push
.github/workflows/: ci.yml  release.yml
.workflow/: config.yml  workflow.schema.json
channels/: package.json  webhook.ts
cli/: Cargo.toml
cli/src/: main.rs
cli/src/adapters/hooks/: hook_handler.rs
cli/src/cmd/: run.rs
cli/src/config/: loader.rs
cli/src/engine/: dag.rs  gate.rs  state.rs  store.rs
cli/src/infra/: settings_writer.rs
cli/src/protocol/: input.rs  output.rs
cli/src/providers/claude_code/: hook_parser.rs  mod.rs
cli/tests/: e2e_agents.rs  e2e_approval.rs  e2e_basic.rs  e2e_errors.rs  e2e_hooks.rs  e2e_multi_workflow.rs  e2e_resume.rs  e2e_run.rs  e2e_smoke.rs
cli/tests/helpers/: mod.rs
docs/: design-worktree-isolation.md
src/: main.rs
src/adapters/: mod.rs
src/config/: loader.rs  types.rs
src/engine/: dag.rs  executor.rs  gate.rs  mod.rs  state.rs  store.rs
src/infra/: mod.rs  settings_writer.rs  shell.rs
src/protocol/: input.rs  output.rs
src/providers/: mod.rs
tests/: e2e_agents.rs  e2e_approval.rs  e2e_hooks.rs  e2e_multi_workflow.rs  e2e_resume.rs  e2e_smoke.rs  e2e_validation.rs
tests/helpers/: mod.rs
(+8 files in other folders)
