[package]
name = "workflow-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "workflow-runner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1"
comfy-table = "7"

[dev-dependencies]
tempfile = "3"
